# catyolo

./: .gitignore  README.md
catyolo_ai_backend/: .env.example  main.py
catyolo_ai_backend/database/: sqlite.py
catyolo_ai_backend/dependencies/: auth.py
catyolo_ai_backend/models/: scene.py
catyolo_ai_backend/routes/: action.py  scene.py
catyolo_ai_backend/services/: scene_service.py
catyolo_ai_frontend/: .env.development  .env.example  index.html  package-lock.json  package.json  serve.py  tsconfig.app.tsbuildinfo
catyolo_ai_frontend/src/: App.tsx  api.ts  config.ts  index.css  storage.ts  types.ts  vite-env.d.ts
catyolo_ai_worker/: .env.example  .gitignore  README.md  main.py  pyproject.toml
catyolo_ai_worker/detector/: actions_watcher.py  capture.py  config.py  config_watcher.py  debug_main.py  events.py  geometry.py  main.py  pipeline.py  scene_registry.py  stream.py
catyolo_ai_worker/detector/detectors/: base.py  hailo_runner.py  occlusion_detection.py  occlusion_detectionV2.py
catyolo_ai_worker/detector/handlers/: __init__.py  base.py  registry.py  sample_saver.py  smb_uploader.py  telegram_sender.py  webhook_dispatcher.py  whatsapp_sender.py
catyolo_ai_worker/detector/inference/: __init__.py  factory.py  hailo10_backend.py  hailo8_backend.py  preprocessing.py  protocols.py
catyolo_ai_worker/scripts/: occlusion.py
catyolo_ai_worker/tests/: test_bbox_rescale.py  test_geometry.py
deploy/: install.sh
deploy/hefs/: manifest-hailo10h.yaml  manifest-hailo8.yaml
deploy/lib/: common.sh
deploy/systemd/: catyolo-backend.service  (+2 more)
(+15 files in other folders)
